Fixed cutoff logo issue

--- a/client/src/Header/Header.scss
+++ b/client/src/Header/Header.scss
@@ -25,7 +25,7 @@ nav {
         }
 
         img#logo {
-            width: 160px;
+            width: auto;
             display: inline-block;
         }
 
